modules/noosphere/taghmata/nixidy/manifests/prod/garage-operator/Ingress-garage-s3-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
  name: garage-s3-api
  namespace: garage-operator
spec:
  ingressClassName: traefik
  rules:
    - host: s3.garage-main.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: garage-s3-api
                port:
                  number: 3900
            path: /
            pathType: Prefix
    - host: '*.s3.main.garage.noosphere.uk'
      http:
        paths:
          - backend:
              service:
                name: garage-s3-api
                port:
                  number: 3900
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - s3.main.garage.noosphere.uk
        - '*.s3.main.garage.noosphere.uk'
      secretName: garage-operator-s3-tls
